feat: update README with IntelliJ config for debug mode