@@ -9,3 +9,10 @@ We also need the nbaction.xml that triggers the plugin when running the applicat
 
 #### For IntelJ
 Dont execute project from Run. Execute javafx:run from maven.
+###### Alternative to maven. 
+Create a Run Configuration of type Application.
+Add to "Vm options" the following line:
+
+--module-path "$(find ~/.m2/repository/org/openjfx/ -name '*-linux.jar' | paste -sd: -)" --add-modules ALL-MODULE-PATH
+
+With this configuration, modules are imported automatically, ignoring Maven altogether.
